fix spacing / add hover effect & getTag API
